--- a/data/uploads/.htaccess
+++ b/data/uploads/.htaccess
@@ -1,3 +1,10 @@
-Options -Indexes
-Allow from all
+#
+# GetSimple CMS htaccess ALLOW file
+#
 
+<IfModule !mod_authz_core.c>
+	Allow from all
+</IfModule>
+<IfModule mod_authz_core.c>
+	Require all granted
+</IfModule>	
