--- a/.gitattributes
+++ b/.gitattributes
@@ -46,3 +46,5 @@
 .gitattributes export-ignore  
 .gitignore export-ignore
 .gskeep export-ignore
+README.md export-ignore
+CONTRIBUTING.md export-ignore
