--- a/.gitattributes
+++ b/.gitattributes
@@ -2,23 +2,23 @@
 
 # Handle line endings automatically for files detected as text
 # and leave all files detected as binary untouched.
-# * text=auto
+* text=auto
 
 #
 # The above will handle all files NOT found below
 #
 
 # These files are text and should be normalized (Convert crlf => lf)
-# *.php text
-# *.css text
-# *.js text
-# *.htm text
-# *.html text
-# *.xml text
-# *.txt text
-# *.ini text
-# *.inc text
-# .htaccess text
+*.php text
+*.css text
+*.js text
+*.htm text
+*.html text
+*.xml text
+*.txt text
+*.ini text
+*.inc text
+.htaccess text
 
 # These files are binary and should be left untouched
 # (binary is a macro for -text -diff)
