--- a/data/uploads/.htaccess
+++ b/data/uploads/.htaccess
@@ -22,3 +22,7 @@
 	</IfModule>
 
 </IfModule>	
+
+# disable script execution
+AddHandler cgi-script .php .pl .py .jsp .asp .htm .shtml .sh .cgi
+Options -ExecCGI
