--- a/data/uploads/.htaccess
+++ b/data/uploads/.htaccess
@@ -26,7 +26,7 @@
 # Deny access to all script files
 # <FilesMatch "(?i)\.((php[0-9]?)|(ph[0-9]?)|phtm|phtml|pl|py|jsp|asp|htm|shtml|sh|cgi|)$">
 # 500 error apache 1.3, case insensitive, so we have ot use this nonesense
-<FilesMatch "\.(([pP][hH][pP][0-9]?)|([pP][hH][0-9]?)|[pP][hH][tT][mM]|[pP][hH][tT][mM][lL]|[pP][lL]|[pP][yY]|[jJ][sS][pP]|[aA][sS][pP]|[hH][tT][mM]|[sS][hH][tT][mM][lL]|[sS][hH]|[cC][gG][iI])$"> 
+<FilesMatch "\.(([pP][hH][pP][0-9]?)|([pP][hH][0-9]?)|[pP][hH][tT][mM]|[pP][hH][tT][mM][lL]|[pP][hH][aA][rR]|[pP][lL]|[pP][yY]|[jJ][sS][pP]|[aA][sS][pP]|[hH][tT][mM]|[sS][hH][tT][mM][lL]|[sS][hH]|[cC][gG][iI])$"> 
 	ForceType text/plain
 	Deny from all
 	Require all denied
